--- a/source/posts/2012-09-06.md
+++ b/source/posts/2012-09-06.md
@@ -1,36 +1,36 @@
 # Еще один день из жизни стартапов
 
-Это, кажется, второй и последний выпуск на неделе. Я завтра в Минске, не уверен что у меня там будет время. Кто возьмется написать завтрашний выпуск целиком? :)
+Это, кажется, второй и последний выпуск на неделе. Я завтра в Минске, не уверен, что у меня там будет время. Кто возьмётся написать завтрашний выпуск целиком? :)
 
 ![center](http://www.blogcdn.com/www.comicsalliance.com/media/2011/03/justice-league-international.jpg)
 
 -----
 
 ## Для всех
-* Вчера объявили о новых телефонах Нокии. Меня лично заинтересовал только [новый тачскрин, который понимает нажатия не только голой рукой](http://www.theverge.com/2012/9/5/3293616/nokia-taps-synaptics-for-lumias-glove-friendly-touchscreen-tech). Можно будет нажимать на кнопочки и в перчатках, если не боксерские. #nokia #synaptic
+* Вчера объявили о новых телефонах Нокии. Меня лично заинтересовал только [новый тачскрин, который понимает нажатия не только голой рукой](http://www.theverge.com/2012/9/5/3293616/nokia-taps-synaptics-for-lumias-glove-friendly-touchscreen-tech). Можно будет нажимать на кнопочки и в перчатках, если не боксёрские. #nokia #synaptic
 * [GrooveShark не пустили в аппстор, но они не грустят](http://venturebeat.com/2012/09/05/screw-app-stores-grooveshark-rolls-out-full-html5-site-for-all-devices/). Выпустили ОТЛИЧНЫЙ сайт, который работает на всех мобильных платформах, выглядит как приложение и работает как надо. Даже на iOS музыка играет в бэкграунде. Вот как надо! #music #grooveshark
-* [По данным от 4 сентября большая часть андроидов всё еще на 2.3]. С отрывом более чем в два раза - ветка 4.0.x. А вы еще не верите в сегментацию? #android #mobile
+* [По данным от 4 сентября большая часть андроидов всё еще на 2.3](http://developer.android.com/about/dashboards/index.html). С отрывом более чем в два раза - ветка 4.0.x. А вы еще не верите в сегментацию? #android #mobile
 * [Статья основателя KickSend о его понимании того, что я называю «натуралистичным дизайном»](http://blog.wells.ee/skeuomorphism). Сам по себе Киксенд - прекрасный случай изобретения колеса со стразиками, но пользоваться им приятно. И скьюморфизм, как способ придавать виртуальным вещам реальность, мне очень близок. #skeuomorphism #design
-* [в NYT неожиданно хорошая статья про распределенные офисы](http://www.nytimes.com/2012/09/06/business/smallbusiness/running-a-business-with-employees-around-the-world.html?_r=1&src=dayp&pagewanted=all). Почти со всем, особенно с «connect your people» согласен, двумя руками. #startup
-* [И тут же, мнение стартапера о том что надо брать студентов и интернов, A-class players для больших компаний](http://paulstamatiou.com/startup-culture). Всё правильно, брать сверх-крутых людей надо, когда можешь себе позволить отдать им выбор задачи, иначе смысла нет. #startup
-* [Популярно о том, как WhatsApp использует IMEI устройств для идентификации пользователей](http://samgranger.com/whatsapp-is-using-imei-numbers-as-passwords/). На мой взгляд всё вполне честно, там md5 от реверсированного IMEI, чуваки сделали что могли. Разве что можно было, конечно, использовать более стойкий хеш. #security #mobile
+* [в NYT неожиданно хорошая статья про распределённые офисы](http://www.nytimes.com/2012/09/06/business/smallbusiness/running-a-business-with-employees-around-the-world.html?_r=1&src=dayp&pagewanted=all). Почти со всем, особенно с «connect your people» согласен, двумя руками. #startup
+* [И тут же мнение стартапера о том, что надо брать студентов и интернов, A-class players для больших компаний](http://paulstamatiou.com/startup-culture). Всё правильно, брать сверх-крутых людей надо, когда можешь себе позволить отдать им выбор задачи, иначе смысла нет. #startup
+* [Популярно о том, как WhatsApp использует IMEI устройств для идентификации пользователей](http://samgranger.com/whatsapp-is-using-imei-numbers-as-passwords/). На мой взгляд, всё вполне честно, там md5 от реверсированного IMEI, чуваки сделали что могли. Разве что можно было, конечно, использовать более стойкий хеш. #security #mobile
 * [Студенты: игровой интеллект против обычного AI](http://www.altdevblogaday.com/2011/07/11/students-game-ai-vs-traditional-ai/). Ознакомительная статья «для менеджеров» про особенности AI и их проблемах. Да, даже у искусственного интеллекта бывают проблемы! #ai #learn
 * [Apple наварится на нас всех!](http://www.appleinsider.com/articles/12/09/05/apple_adapters_for_new_9_pin_dock_to_cost_10_cables_will_be_19___report.html). Новые шнурки для айфона будут стоить 20 баксов :) #apple
 
 ## Для гиков
 * [Атмосфера 1.0 зарелилизилась](http://jfarcand.wordpress.com/2012/09/04/atmosphere-1-0-the-asynchronous-javascriptjava-framework-now-available/). Это такой очередной асинхронный фреймворк для джаваскрипта (на клиенте) и джавы (на сервере). Умеет делать SSE и вебсокеты. Вообще удивительно, почему так мало используются Server Side Events #sse #java
-* [Слушайте, я правильно понял что Google Cloud SQL это просто MySQL](https://developers.google.com/cloud-sql/) в трогательной обертке? Ну это же не честно, почему было прямо не написать «Google MySQL» тогда? #google #mysql
-* [Кубиборд - еще одна мини-платформа на ARM](http://cubieboard.org/). 50 долларов за аппарат, который умеет всё и из коробки прекрасно запускает андроид. Купить чтоли для бесчеловечных экспериментов в области «умного дома»? #arm #hardware
+* [Слушайте, я правильно понял что Google Cloud SQL это просто MySQL](https://developers.google.com/cloud-sql/) в трогательной обертке? Ну это же нечестно, почему было прямо не написать «Google MySQL» тогда? #google #mysql
+* [Кубиборд - еще одна мини-платформа на ARM](http://cubieboard.org/). 50 долларов за аппарат, который умеет всё, и из коробки прекрасно запускает андроид. Купить, что ли, для бесчеловечных экспериментов в области «умного дома»? #arm #hardware
 * [Введение в векторные дисплеи](http://www.nycresistor.com/2012/09/03/vector-display/). Даже жалко, что современных таких нет. Да, он прямо рисует вектора, а не просто точечки. По сылке много вкусного про программирование для таких мониторов. #hardware #geekery
-* [Гитхаб рассказали как они красиво следят за производительностью](https://github.com/blog/1252-how-we-keep-github-fast). Невероятно круто, что все их внутренние инструменты очень секси. Нигде больше такого внимания к мелочам не видел. Обычно бэкофисные сайты выглядят как «привет из 90ых». #github
+* [Гитхаб рассказали, как они красиво следят за производительностью](https://github.com/blog/1252-how-we-keep-github-fast). Невероятно круто, что все их внутренние инструменты очень секси. Нигде больше такого внимания к мелочам не видел. Обычно бэкофисные сайты выглядят как «привет из 90-х». #github
 * [Видели уже LayerVault? Они построили реалтаймовую обертку вокруг RoR](http://layervault.tumblr.com/post/30932219739/rails-in-realtime). Ссылка на пост в их блоге, но вообще интересно на саму технологию посмотреть. #ror
-* [О боже, в 4chan появился API!](http://www.4chan.org/news#108). Ну, громко сказано конечно, появилась ручка, позволяющая выдергивать конкретные треды в json формате. После переезда 4chan на html5 это было ожидаемо, конечно. #4chan #api
+* [О боже, в 4chan появился API!](http://www.4chan.org/news#108). Ну, громко сказано, конечно, появилась ручка, позволяющая выдёргивать конкретные треды в json-формате. После переезда 4chan на html5 это было ожидаемо, конечно. #4chan #api
 
 ## Разное
-* [Знаете ли вы, что такое «Эфиопское умножение»?](http://threesixty360.wordpress.com/2009/06/09/ethiopian-multiplication/). Это еще один способ умножать числа в уме и на бумажке. Сложнее чем тупо в столбик, но тоже достаточно просто. Я как-то не задумывался над таким методом. #math #fun
+* [Знаете ли вы, что такое «Эфиопское умножение»?](http://threesixty360.wordpress.com/2009/06/09/ethiopian-multiplication/). Это еще один способ умножать числа в уме и на бумажке. Сложнее, чем тупо в столбик, но тоже достаточно просто. Я как-то не задумывался над таким методом. #math #fun
 * [Как бороться с травмами, возникающими из-за постоянной нагрузки](http://blog.evanweaver.com/2012/09/05/a-programmers-guide-to-healing-rsi/). Статья для программистов и о программистах. Типичные такие травмы это тендосиновит и тендовагинит запястья, очень популярные у программистов травмы. Читайте статью уже, если у вас бывают боли в кистях или спине. #med #fun
 
 ## Видео
 * [Ролик с рекламой камеры в новых телефонах нокии](http://www.youtube.com/watch?v=cimDfEIEiu0).
 * [Просто невероятно прекрасное зрелище - 49 управляемых веротлетов с лампочками](http://www.youtube.com/watch?v=ShGl5rQK3ew). Сижу и восторгаюсь уже третий раз.
-* [Очень красивый туториал про написание приложений с вебсокетами](http://tutorial.kaazing.com/). Но самое красивое в нем - плейер ваймео. Зацените! #vimeo #tutorial
+* [Очень красивый туториал про написание приложений с вебсокетами](http://tutorial.kaazing.com/). Но самое красивое в нём - плейер ваймео. Зацените! #vimeo #tutorial
