--- a/source/posts/2012-09-10.md
+++ b/source/posts/2012-09-10.md
@@ -6,9 +6,9 @@
 
 ## Для всех
 * [Переходите на нативные разработки, HTML5 будет тормозить всегда](http://blog.suthakamal.com/2012/08/go-native-html5-is-going-to-lag-for.html). Я мечтаю о прекрасном мире, в котором приложения на HTML10 работают быстрее, чем нативные. Хочется вернуться в мир очень тонких клиентов.
-* [Отличные разборки на стэкэксчендже, про «компанию в которой большая текучка программистов»](http://programmers.stackexchange.com/questions/43409/dealing-with-engineers-that-frequently-leave-their-jobs). Она старая, но вот всплыла. Читал с упоением, некоторые фразы хочется распечатать на карточки и выложить по офису. Чтобы люди, знали как их ценят. #hr
-* [Амазон не дал автору документации по ArchLinux раздавать книгу](http://archlinux.me/dusty/2012/09/09/arch-linux-handbook-for-kindle/). Ну ладно, ладно, всего лишь не дал разавать книгу через амазон, потому что не понял как быть с авторством. #amazon
-* [Memstash - весьма оригинальный сервис для тех, кто забывает](http://memstash.co/). Этакая напоминалка-тренировалка памяти, интересная и простая. Правда смски в россию она мне отправить не смогла. #memory #app
+* [Отличные разборки на стэкэксчендже, про «компанию, в которой большая текучка программистов»](http://programmers.stackexchange.com/questions/43409/dealing-with-engineers-that-frequently-leave-their-jobs). Она старая, но вот всплыла. Читал с упоением, некоторые фразы хочется распечатать на карточки и выложить по офису. Чтобы люди, знали как их ценят. #hr
+* [Амазон не дал автору документации по ArchLinux раздавать книгу](http://archlinux.me/dusty/2012/09/09/arch-linux-handbook-for-kindle/). Ну ладно, ладно, всего лишь не дал раздавать книгу через амазон, потому что не понял, как быть с авторством. #amazon
+* [Memstash - весьма оригинальный сервис для тех, кто забывает](http://memstash.co/). Этакая напоминалка-тренировалка памяти, интересная и простая. Правда смски в Россию она мне отправить не смогла. #memory #app
 * [Стэнфорд объявил о том, что в скоро у них будет 16 онлайн-курсов](http://news.stanford.edu/news/2012/september/online-courses-fall-090712.html). Кажется, последние два года начался настоящий бум онлайн-курсов и вообще дистанционного образования. Это большое достижение всех, кто двигал это дело вперед, особенно Курзера, конечно. #edu
 * [Филосовский текст о том, насколько важно делать СамоеЛучшее](http://karrisaarinen.com/in-defense-of-the-best). Это прямо моя модель. Если ты хочешь сделать самое лучшее - сделаешь хорошо. Если хочешь сделать хорошо - сделаешь средне. Если хочешь сделать средне - не сделаешь никак. Автор статьи, если что, говорить про другое и цитирует «Искусство ухода за мотоциклом».
 * [Сервис «как я люблю» - Tunes.io](http://tunes.io/), каждый день новый, небольшой плейлист из разных песен. Отличный способ изучать новую музыку. 
@@ -18,12 +18,12 @@
 * [Проблемы связанных списков и как их избежать](http://www.codeofhonor.com/blog/avoiding-game-crashes-related-to-linked-lists). Пригодится всем, кто пишет на плюсах. Хотя, в других языках проблемы с линкед-листами такие же. #cpp
 * [РетроПочта - внезапно нашлось письмо от чувака из гугла, который признается, что нативное приложение GTalk всё](https://productforums.google.com/forum/#!msg/chat/BjmLgrLhiA8/v0Bh3rE0HW4J). Не надейтесь, больше gtalk для iOS не будет, переходите на андроид!
 * [Еще один ретропост - как сделать самый маленький GIF](http://probablyprogramming.com/2009/03/15/the-tiniest-gif-ever). Вообще очень люблю истории, в которых что-то делается побайтово. Хендмейд! #gif #handmade
-* [Компьютер, который потребляет всего 5.9 ватт!](http://ssj3gohan.tweakblogs.net/blog/8217/fluffy2-59-watt-high-end-desktop-computer.html). При этом это полноценный десктоп, правда без корпуса. Жду, когда обычный PC можно будет запитать от человеческого организма :)
+* [Компьютер, который потребляет всего 5,9 ватт!](http://ssj3gohan.tweakblogs.net/blog/8217/fluffy2-59-watt-high-end-desktop-computer.html). При этом это полноценный десктоп, правда, без корпуса. Жду, когда обычный PC можно будет запитать от человеческого организма :)
 * [Настоящий древний навигатор](http://www.core77.com/blog/object_culture/roadbooks_part_4_the_wrist-mounted_original_23356.asp), в стиле прошлого века. Бумажка и ролик - идеальное решение, не требующее электричества.
 
 ## Разное
-* [Три причины почему детская порнография может быть легализована](http://falkvinge.net/2012/09/07/three-reasons-child-porn-must-be-re-legalized-in-the-coming-decade/) в следующие десять лет. А я надеюсь, что у человечества есть еще шансы сохранить человеческое лицо.
-* [Хабл нашел древнюю галактику, которой вообще быть не должно](http://io9.com/5927315/hubble-has-spotted-an-ancient-galaxy-that-shouldnt-exist). BX442 слишком старая для сформировавшейся галактики. Это опять отодвигает время Большого Взрыва, или меняет представление о формировании галактик. 
+* [Три причины, почему детская порнография может быть легализована](http://falkvinge.net/2012/09/07/three-reasons-child-porn-must-be-re-legalized-in-the-coming-decade/) в следующие десять лет. А я надеюсь, что у человечества есть ещё шансы сохранить человеческое лицо.
+* [Хаббл нашёл древнюю галактику, которой вообще быть не должно](http://io9.com/5927315/hubble-has-spotted-an-ancient-galaxy-that-shouldnt-exist). BX442 слишком старая для сформировавшейся галактики. Это опять отодвигает время Большого Взрыва, или меняет представление о формировании галактик. 
 
 ## Видео
 * [Еще один дизайн мобильной ОС](http://www.retrevo.com/content/blog/2012/09/video-week-frog-design-presents-their-version-phone-user-interface).
