--- a/source/posts/2012-09-11.md
+++ b/source/posts/2012-09-11.md
@@ -1,16 +1,16 @@
 # Давай, папка!
 
-Вчера, как вы наверняка заметили, не работало пол интернета. Гипербола, конечно, но причина была простой - отключился DNS одного из самых крупных хостеров мира, компании GoDaddy.
+Вчера, как вы, наверняка, заметили, не работало полинтернета. Гипербола, конечно, но причина была простой - отключился DNS одного из самых крупных хостеров мира, компании GoDaddy.
 
 ![center](http://img-fotki.yandex.ru/get/6513/9320383.8/0_7ebde_ff3e9709_orig)
 
-DNS был недоступен в течении примерно 5 часов, при этом более 4.5 миллионов сайтов просто не находились браузерами пользователей. Считается что главная причина отказа серверов - атака очередной группы «Анонимусов», однако веры в это нет никакой. Более того, написал об этом только [@AnonymousOwn3r](https://twitter.com/AnonymousOwn3r), который считается самопровозглашённым лидером анонимусов в США.
+DNS был недоступен в течении примерно 5 часов, при этом более 4,5 миллионов сайтов просто не находились браузерами пользователей. Считается, что главная причина отказа серверов - атака очередной группы «Анонимусов», однако веры в это нет никакой. Более того, написал об этом только [@AnonymousOwn3r](https://twitter.com/AnonymousOwn3r), который считается самопровозглашённым лидером анонимусов в США.
 
-Еще интересно, что атаке (а точнее отключению) подвергся только один сегмент NS-серверов ГоуДедди, тот, что в штатах. Азиатский сегмент их парка серверов по-прежнему отвечал нормально. И вдвойне интереснее, что GoDaddy так и не смогли включить свои DNS сервера. Всё что они смогли сделать - договориться со своим главным конкурентом, компанией VeriSign, и [перевезти большую часть доменов на чужие NS-ы](http://www.wired.com/wiredenterprise/2012/09/godaddy-moves-to-verisign/).
+Ещё интересно, что атаке (а точнее, отключению) подвергся только один сегмент NS-серверов ГоуДедди, тот, что в штатах. Азиатский сегмент их парка серверов по-прежнему отвечал нормально. И вдвойне интереснее, что GoDaddy так и не смогли включить свои DNS сервера. Всё что они смогли сделать - договориться со своим главным конкурентом, компанией VeriSign, и [перевезти большую часть доменов на чужие NS-ы](http://www.wired.com/wiredenterprise/2012/09/godaddy-moves-to-verisign/).
 
-Больше всего, конечно, пострадали малые бизнесы и некоммерческие организации, такие как [Radio-T](http://radio-t.com/) например. Но самый большой удар пришелся по репутации самой GoDaddy. Напомню, это второй большой скандал, связанный с этим хостером. В предыдущий раз они засветились тем, что поддержали SOPA/PIPA.
+Больше всего, конечно, пострадали малые бизнесы и некоммерческие организации, такие как [Radio-T](http://radio-t.com/), например. Но самый большой удар пришёлся по репутации самой GoDaddy. Напомню, это второй большой скандал, связанный с этим хостером. В предыдущий раз они засветились тем, что поддержали SOPA/PIPA.
 
-Гиковское комьюнити настолько поражено этой историей, что многие даже [призывают мигрировать на другие NSы, например на Amazon Route 53](http://davewasmer.tumblr.com/post/31283249223/migrating-from-godaddy-dns-to-amazon-route-53). Я его пробовал, и как-то пока не вижу в нем особого смысла, если честно.
+Гиковское комьюнити настолько поражено этой историей, что многие даже [призывают мигрировать на другие NSы, например, на Amazon Route 53](http://davewasmer.tumblr.com/post/31283249223/migrating-from-godaddy-dns-to-amazon-route-53). Я его пробовал, и как-то пока не вижу в нём особого смысла, если честно.
 
 ----- 
 
@@ -18,7 +18,7 @@ DNS был недоступен в течении примерно 5 часов,
 
 **Йован зовет!**
 
-Лепра и Дёрти [ищут разработчика](http://j.mp/QvYK5t) их новой платформы. Python, PostreSQL, Skytools. Фултайм, но возможна даже удаленка!
+Лепра и Дёрти [ищут разработчика](http://j.mp/QvYK5t) их новой платформы. Python, PostreSQL, Skytools. Фултайм, но возможна даже удалёнка!
 
 -----
 
@@ -26,18 +26,18 @@ DNS был недоступен в течении примерно 5 часов,
 * [Нынешние загрузчики фотографий ужасны](http://blog.filepicker.io/post/31287543532/photos-are-a-b-tch-photo-uploading-is-broken), пишет автор файлпикера, и я с ним согласен. Действительно, фотографии это то, что загружают в интернет чаще всего, и на какие ухищрения приходится идти разработчикам и пользователям - страшно смотреть. #upload #filepicker
 * [Закрылся FitFu, команда уходит в другой стартап](http://blog.fitfu.com/2012/09/10/the-end-of-a-journey/). Лучшее окончание довольно бесполезного проекта, команда сохранена и двигается дальше. #fitfu #startup
 * Драма: [Marco закрыл доступ к 9to5Mac в инстапапере](http://9to5mac.com/2012/09/10/dont-call-it-instascraper-why-you-cant-read-9to5mac-on-instapaper/), сами найнтуфайв говорят, что это цензура! #drama
-* Драма: [Сам Марко пишет, что 1. было за что, 2. уже открыл, 3. извинился, вспылил](http://blog.instapaper.com/post/31303984531). Действительно смешно, сначала 9to5 публично фекалируют Instapaper, а потом сами же плачут, что их оттуда выкинули. Марко молодец, всё, правильно, сделал. #drama
-* [Больше слухов про новую игровую консоль от Valve](http://kotaku.com/5941793/valve-is-bringing-steam-to-your-tv-today-watch-out-consoles). Все больше верю в историю про «steam для Linux» связана именно с этой консолью. #valve #steam #linux
+* Драма: [Сам Марко пишет, что 1. было за что, 2. уже открыл, 3. извинился, вспылил](http://blog.instapaper.com/post/31303984531). Действительно смешно, сначала 9to5 публично фекалируют Instapaper, а потом сами же плачут, что их оттуда выкинули. Марко молодец, всё правильно сделал. #drama
+* [Больше слухов про новую игровую консоль от Valve](http://kotaku.com/5941793/valve-is-bringing-steam-to-your-tv-today-watch-out-consoles). Все больше верю, что история про «steam для Linux» связана именно с этой консолью. #valve #steam #linux
 * [Очень интересный проект для научных обсуждений - Pivory](http://pivory.com/#topic/1/1265). Нет, я не издеваюсь, он действительно очень крутой и в нем есть очень много вещей, которые порождают СОВСЕМ другое изложение материала и совсем другое обсуждение. Я фанатею. #pivory #science
 * [Немножко самопознания: как я научился дефрагментировать свой мозг](http://alexhillman.com/defrag-your-brain-with-a-sparkfile). А у вас есть файл или что-нибудь с вашими гениальными идеям? У меня есть, но я его прячу от всех, не дай бог. #lifehack
 
 ## Для гиков
 * Бобук слоупок. [А вы знали что в php с 5.4.0 есть встроенный вебсервер?](http://php.net/manual/en/features.commandline.webserver.php). Ну, теперь как в перле и питоне, всё как у людей! #php #ohwey
-* Бобук снова слоупок. [Revel - фреймворк для написания веб-приложений на Go](http://robfig.github.com/revel/). Вся идеология откровенно сперта у [Play!](http://www.playframework.org/), но это скорее хорошо, чем плохо. Попробую и на нем что-нибудь написать. #go #web #play
+* Бобук снова слоупок. [Revel - фреймворк для написания веб-приложений на Go](http://robfig.github.com/revel/). Вся идеология откровенно спёрта у [Play!](http://www.playframework.org/), но это скорее хорошо, чем плохо. Попробую и на нём что-нибудь написать. #go #web #play
 * Бобук опять слоупок. Только увидел [Gow - работающую альтернативу cygwin](https://github.com/bmatzelle/gow). Удобный установщик почти всех нужных мне тулзов, если я вдруг окажусь на Windows. #cygwin #gnu
 * [На адоби решили отметить выход инструментов от Твиттера статьёй про Yeoman](http://www.adobe.com/devnet/html5/articles/yeoman-at-your-service.html). Своевременно так. Мне тоже yeoman нравится больше, он хоть милые картинки в консоли рисует. #yeoman #html #javascript
 * [Как из киндла и RaspberryPi сделать почти полноценный компьютер](http://www.ponnuki.net/2012/09/kindleberry-pi/). На самом деле не «почти», а полноценный, просто с экраном от киндла. Хороший походный набор, хотя я бы распбери упаковал в красивую коробочку, а не носил кишками наружу. #raspberry #kindle #geekery
-* [Зажигательные рассказы про FoundationDB](http://techcrunch.com/2012/09/10/foundationdb-not-your-standard-nosql-database/), еще одну KV-базу данных, которая «сильно лучше чем остальные». И я опять miss the point чем именно она лучше. Начал уставать от NoSQL хайпа. #nosql
+* [Зажигательные рассказы про FoundationDB](http://techcrunch.com/2012/09/10/foundationdb-not-your-standard-nosql-database/), ещё одну KV-базу данных, которая «сильно лучше, чем остальные». И я опять miss the point, чем именно она лучше. Начал уставать от NoSQL хайпа. #nosql
 
 ## Разное
-* [В Nature статья про глубокую связь между простыми числами](http://www.nature.com/news/proof-claimed-for-deep-connection-between-primes-1.11378). Это я так пользуюсь собой как закладками. Еще не читал, расскажите что там? #ask #math
+* [В Nature статья про глубокую связь между простыми числами](http://www.nature.com/news/proof-claimed-for-deep-connection-between-primes-1.11378). Это я так пользуюсь собой как закладками. Ещё не читал, расскажите что там? #ask #math
