--- a/source/posts/2012-09-12.md
+++ b/source/posts/2012-09-12.md
@@ -43,5 +43,5 @@
 * [Колода карт, сделанная без картинок, только на CSS](http://zachwaugh.com/helveticards/index.html). Красота, а? #css #html
 * [Рассказ о том, как Shareholic перешли на Riak](http://basho.com/blog/technical/2012/09/11/Riak-at-Shareaholic/). Дада, с Монги некоторые бегут, по причине очень энтерпрайзного взгляда на жизнь. #mongo #db
 * [Очень подробная статья: взгляд на электронную почту с высоты полета админа](http://blog.phusion.nl/2012/09/10/mail-in-2012-from-an-admins-perspective/). Подробно про SPF и DKIM, в частности. #mail #unix
-* [Текстовый редактор на базе OpenGL. Очень секси.](http://www.youtube.com/watch?v=y8aL4Cnb9m4) [Исходники лежат на гитхабе.](https://github.com/clinuxrulz/GLSL-Live-Editor/)
+* [Текстовый редактор на базе OpenGL.] Крутяк, да? (http://www.youtube.com/watch?v=y8aL4Cnb9m4) [Исходники лежат на гитхабе.](https://github.com/clinuxrulz/GLSL-Live-Editor/)
 
