--- a/source/posts/2012-09-12.md
+++ b/source/posts/2012-09-12.md
@@ -4,7 +4,7 @@
 
 ![center](http://www.bannedinhollywood.com/wp-content/uploads/2012/08/youtube-comments-funny-fail-bannedinhollyood-19.jpg)
 
-Приложение получилось странным. Нет, если бы старого приложения не было - все бы наверное решили, что так и надо: запутанный интерфейс, мелким шрифтом комментарии, реклама, большой выбор категорий и невозможность загрузить видео. Но ведь оно уже было. У нас было прекрасное, маленькое, уютное приложение, позволяющее просто смотреть и загружать видео. Ни комментариев, ни рекламы мне там не нужно, честное слово. Я на мобильном, мне дорог трафик. Ну да ладно, давайте считать, что только я дегенерат и мне не понравилось новое приложение. В конце концов, что я придираюсь, в гугле никогда небыло хороших дизайнеров, а ютуб для них просто дыра, куда вылетают деньги.
+Приложение получилось странным. Нет, если бы старого приложения не было - все бы, наверное, решили, что так и надо: запутанный интерфейс, мелким шрифтом комментарии, реклама, большой выбор категорий и невозможность загрузить видео. Но ведь оно уже было. У нас было прекрасное, маленькое, уютное приложение, позволяющее просто смотреть и загружать видео. Ни комментариев, ни рекламы мне там не нужно, честное слово. Я на мобильном, мне дорог трафик. Ну да ладно, давайте считать, что только я дегенерат и мне не понравилось новое приложение. В конце концов, что я придираюсь, в гугле никогда не было хороших дизайнеров, а ютуб для них просто дыра, куда вылетают деньги.
 
 Что нового появилось в приложении:
 
@@ -18,7 +18,7 @@
 * к релизу подогнали клипы от VEVO под формать h.264
 * и, чуть не забыл, по просьбам трудящихся добавлен шаринг в гуглплюс!
 
-Почему я расстроен? Не знаю. Я надеялся на то, что гугл сделает лучшее приложение для YouTube, покажет всем как нужно делать продукты, которые выкидывают из iOS. Но нет, нам показали программку, главная задача которой - продемонстрировать все фичи ютуба и гуглплас. Ну поймите уже наконец, не может весь набор функций с десктопа присутствовать на мобильном. Это не нужно никому, а особенно вашим пользователям. Поймите, и тогда люди к вам потянутся. А сейчас 90% людей будут ставить это приложение, только если не будет альтернатив. Помяните моё бобуковское слово.
+Почему я расстроен? Не знаю. Я надеялся на то, что гугл сделает лучшее приложение для YouTube, покажет всем, как нужно делать продукты, которые выкидывают из iOS. Но нет, нам показали программку, главная задача которой - продемонстрировать все фичи ютуба и гуглплас. Ну поймите уже, наконец, не может весь набор функций с десктопа присутствовать на мобильном. Это не нужно никому, а особенно — вашим пользователям. Поймите, и тогда люди к вам потянутся. А сейчас 90% людей будут ставить это приложение, только, если не будет альтернатив. Помяните моё бобуковское слово.
 
 Если вам лень ставить приложение - [посмотрите на скриншоты, вы всё поймете](http://www.businessinsider.com/youtube-iphone-app-2012-9) без лишних слов.
 
@@ -26,15 +26,15 @@
 
 # На правах не-рекламы
 
-Я сегодня в 21.00, буду сидеть с камерой и обсуждать анонсы Apple. Там будет чатик, видео, ссылки, картинки, одетый Бобук и коллектив единомышленников. Ближе часам к 20 будет ясно где именно трансляция, об этом я напишу [у себя в твиттере](http://twitter.com/bobuk). Приходите, будет зажигательно, как в прошлый раз.
+Я сегодня в 21.00, буду сидеть с камерой и обсуждать анонсы Apple. Там будет чатик, видео, ссылки, картинки, одетый Бобук и коллектив единомышленников. Ближе часам к 20 будет ясно, где именно трансляция, об этом я напишу [у себя в твиттере](http://twitter.com/bobuk). Приходите, будет зажигательно, как в прошлый раз.
 
 -----
 
 ## Для всех
-* [GoDaddy отчитались](http://www.godaddy.com/newscenter/release-view.aspx?news_item_id=410). Помните [вчера я вам писал](http://addmeto.cc/post/2012-09-11/) как у них нехорошо вышло с DNS? Теперь они говорят, виноват не хакер, а побитая таблица маршрутизации. Ну, это больше похоже на правду.
-* [GarageGames отдали свой движок Torque 3D в опенсорс](http://garagegames.com/community/blogs/view/21876). Вы всё еще пишите свои <s>велосипеды</s> движки? Зачем? #gamedev
-* [Довольно оригинальный способ работать с аудиторией вашего сайта](http://lessneglect.com/customer-analytics#hero). По сути это такой перпендикулярный взгляд на поддержку пользователей.
-* В играх Близзард есть внутренняя функция «сделать скриншот». Так вот [оказывается в этих скриншотах стеганографией зашито много информации](http://www.ownedcore.com/forums/world-of-warcraft/world-of-warcraft-general/375573-looking-inside-your-screenshots.html). Тема старая, но обросла новыми подробностями. #gamedev #blizzard
+* [GoDaddy отчитались](http://www.godaddy.com/newscenter/release-view.aspx?news_item_id=410). Помните, [вчера я вам писал](http://addmeto.cc/post/2012-09-11/), как у них нехорошо вышло с DNS? Теперь они говорят, виноват не хакер, а побитая таблица маршрутизации. Ну, это больше похоже на правду.
+* [GarageGames отдали свой движок Torque 3D в опенсорс](http://garagegames.com/community/blogs/view/21876). Вы всё еще пишете свои <s>велосипеды</s> движки? Зачем? #gamedev
+* [Довольно оригинальный способ работать с аудиторией вашего сайта](http://lessneglect.com/customer-analytics#hero). По сути, это такой перпендикулярный взгляд на поддержку пользователей.
+* В играх Близзард есть внутренняя функция «сделать скриншот». Так вот, [оказывается, в этих скриншотах стеганографией зашито много информации](http://www.ownedcore.com/forums/world-of-warcraft/world-of-warcraft-general/375573-looking-inside-your-screenshots.html). Тема старая, но обросла новыми подробностями. #gamedev #blizzard
 * [Мэт Деитер: почему разработчики не чешутся, когда их зовут на новую работу?](http://coderwall.com/p/devsal) Ну, у автора еще смешнее: почему у разработчиков аллергия на предложения о работе. #startup
 * [Отличная идея: почему бы не сделать почтовый сервер, который принимает только письма не длиннее 500 символов?](http://diegobasch.com/startup-idea-short-paid-email). Хочу расстроить чувака, его идею спёрли примерно 1.5 года назад, в [shortmail.com](http://shortmail.com). #startup
 * [Dispatch.io - средство для организации коммуникаций вокруг файлов в дропбоксе](https://dispatch.io/). Полупубличная бета, осторожнее, они не умеют работать с non-latin1 символами. Стыд и позор, кстати. #unicode #dropbox
