--- a/source/posts/2012-09-13.md
+++ b/source/posts/2012-09-13.md
@@ -2,11 +2,11 @@
 
 *Сегодня ссылок не будет. У меня траур. Но есть хороший текст [@ideali](http://ideali.ru), присланный сразу после вчерашней презентации Apple.*
 
-Предположим, что вы были генеральным директором компании Apple в 2005 году, когда несколько космических пришельцев, путешествуя во времени, предлагают вам:
+**Давайте предположим**, что вы были генеральным директором компании Apple в 2005 году, когда несколько космических пришельцев, путешествуя во времени, предлагают вам:
 
 *Разработку и производство небольших мобильных устройств, которые органично сочетают в себе функциональность сотового телефона, браузера, аудио и видео плеера, а так же маленького компьютера, за счёт чего ваша компания удвоит свою рыночную капитализацию и создаст третью платформу на массовом рынке вычислительных устройств после Windows и Macintosh.*
 
-Захотите ли вы принять это предложение?
+**Захотите ли вы принять это предложение?**
 
 Прежде чем вы ответите: *«Ты спятил, почему бы и нет?»*, давайте задумаемся лишь над немногими из вопросов, связанных с этой задачей:
 
