--- a/source/posts/2012-09-13.md
+++ b/source/posts/2012-09-13.md
@@ -28,7 +28,7 @@
 
 Довольно часто, фанаты Apple не очень ценят необъятные риски которые взял на себя Apple с решением производить iPhone.
 
-**И так год 2005, ваши ход? Стив Джобс сделал:**
+**Итак, год 2005, ваш ход? Стив Джобс сделал свой выбор:**
 
 ![center](http://aboutiphone4g.info/wp-content/uploads/2011/01/Iphone-2G.jpg)
 
