--- a/source/posts/2012-09-13.md
+++ b/source/posts/2012-09-13.md
@@ -4,29 +4,29 @@
 
 **Давайте предположим**, что вы были генеральным директором компании Apple в 2005 году, когда несколько космических пришельцев, путешествуя во времени, предлагают вам:
 
-*Разработку и производство небольших мобильных устройств, которые органично сочетают в себе функциональность сотового телефона, браузера, аудио и видео плеера, а так же маленького компьютера, за счёт чего ваша компания удвоит свою рыночную капитализацию и создаст третью платформу на массовом рынке вычислительных устройств после Windows и Macintosh.*
+*Разработку и производство небольших мобильных устройств, которые органично сочетают в себе функциональность сотового телефона, браузера, аудио и видео плеера, а также маленького компьютера, за счёт чего ваша компания удвоит свою рыночную капитализацию и создаст третью платформу на массовом рынке вычислительных устройств после Windows и Macintosh.*
 
 **Захотите ли вы принять это предложение?**
 
-Прежде чем вы ответите: *«Ты спятил, почему бы и нет?»*, давайте задумаемся лишь над немногими из вопросов, связанных с этой задачей:
+Прежде, чем вы ответите: *«Ты спятил, почему бы и нет?»*, давайте задумаемся лишь над немногими из вопросов, связанных с этой задачей:
 
-1. В данном случае не будет возможности выйти на этот рынок тихо или скромно в надежде расти медленно (как это было, например, с Xserve несколько лет назад). Ваш выход должен быть блокбастером. Вы хорошо умеете создавать повышеный интерес и подогревать ожидание вокруг продукта, но это так же повышает неотвратимость последствий в случае провала, в геометрической прогрессии.
-2. Если вы провалитесь, это будет эпичным публичным провалом, который вероятнее всего приведет к потере одной трети вашей рыночной капитализации и серьезно подорвёт доверие финансового рынка к компании в оценке её способностей демонстрировать рост и умению диверсифицировать свой бизнес (Mac'ов и iPod'ов).
-3. Вы должны будете вести бизнес на высоко регулируемом, высоко конкурентном, масштабном и капиталоемком рынке, с уже сложившемся набором очень состоятельных игроков. Это вам просто не знакомо и вы никогда не умели этого делать.
-4. У вас не будет своей операционной системы предназначенной для мобильных устройств и использование чужого ПО не оправдано технически и не имеет смысла с точки зрения бизнеса.
-5. Вам придётся решить очень длинный список неприятных технических проблем, с которыми сталкиваются мобильные устройства, такие как энергосбережение, эффективная работа с частотами, миниатюризация, хранение, загрузка процессора, многозадачность, облачные вычисления,  графика, ввод данных, сенсорный ввод и т.д.
-6. У вас не будет преимуществ ни в логистике, ни в ценообразовании на компоненты, которые зависят от объема поставок. Они у вас есть при производстве такого продукта как iPod, однако вы не будете иметь эти же преимущества для нового устройства особенно в начале, в противовес Nokia, которая продает сотни миллионов единиц по всему миру каждый год.
+1. В данном случае не будет возможности выйти на этот рынок тихо или скромно в надежде расти медленно (как это было, например, с Xserve несколько лет назад). Ваш выход должен быть блокбастером. Вы хорошо умеете создавать повышенный интерес и подогревать ожидание вокруг продукта, но это также повышает неотвратимость последствий в случае провала, в геометрической прогрессии.
+2. Если вы провалитесь, это будет эпичным публичным провалом, который, вероятнее всего, приведет к потере одной трети вашей рыночной капитализации и серьезно подорвёт доверие финансового рынка к компании в оценке её способностей демонстрировать рост и умению диверсифицировать свой бизнес (Mac'ов и iPod'ов).
+3. Вы должны будете вести бизнес на высокорегулируемом, высококонкурентном, масштабном и капиталоемком рынке, с уже сложившемся набором очень состоятельных игроков. Это вам просто незнакомо и вы никогда не умели этого делать.
+4. У вас не будет своей операционной системы, предназначенной для мобильных устройств, а использование чужого ПО неоправдано технически и не имеет смысла с точки зрения бизнеса.
+5. Вам придётся решить очень длинный список неприятных технических проблем, с которыми сталкиваются мобильные устройства, такие, как энергосбережение, эффективная работа с частотами, миниатюризация, хранение, загрузка процессора, многозадачность, облачные вычисления,  графика, ввод данных, сенсорный ввод и т.д.
+6. У вас не будет преимуществ ни в логистике, ни в ценообразовании на компоненты, которые зависят от объема поставок. Они у вас есть при производстве такого продукта, как iPod, однако вы не будете иметь эти же преимущества для нового устройства, особенно в начале, в противовес Nokia, которая продает сотни миллионов единиц по всему миру каждый год.
 7. Вы, возможно, думали, что иметь дело с музыкальными лейблами было не самое веселое занятие. Теперь попробуйте изменить ситуацию на рынке телефонов и в модели распределения доходов на сложившемся рынке операторов в США и за рубежом.
 8. Вы думаете, что Jonathan Ive может легко реализовать дизайн железа, но вам придется придумывать потрясающий пользовательский интерфейс и действительно инновационную парадигму взаимодействия, чтобы обеспечить запас инноваций перед другими игроками, которая вам, безусловно, нужна. По крайней мере, первые два-три года.
 9. Это устройство, вероятно, потребует кучу сервисов и контента (карты, электронная почта, новости, игры и т.д.), которые находятся за пределами вашей основной компетенции. Потребуются длительные переговоры и создание стратегических партнерств.
-10. Для того чтобы иметь достаточно большую и привлекательную платформу, нужно убедить разработчиков: дать им недорогие инструменты разработки и создать инструмент заработка, которого ни у кого нет на рынке.
+10. Для того, чтобы иметь достаточно большую и привлекательную платформу, нужно убедить разработчиков: дать им недорогие инструменты разработки и создать инструмент заработка, которого ни у кого нет на рынке.
 11. Как уже было с iPod, вам придется продавать это устройство в мире, ориентированном на Windows.
 12. Чтобы быстро достичь прибыльности, вы должны будете распространять устройства в большем количестве стран по всему миру, даже там, где у вас отсутствует рынок или низкое проникновение Mac'ов или iPod'ов.  
 13. Если вы хотите достичь масштаба iPod (а вам это необходимо), вам придется внедрять и управлять новой глобальной системой продаж и поддержки.
 14. Понятно, что это очень высокая ставка для компании, а противники Apple вооружены и готовы к борьбе.
 15. Так вышло, что недавно вам поставили диагноз: рак поджелудочной железы.
 
-Довольно часто, фанаты Apple не очень ценят необъятные риски которые взял на себя Apple с решением производить iPhone.
+Довольно часто, фанаты Apple не очень ценят необъятные риски, которые взял на себя Apple с решением производить iPhone.
 
 **Итак, год 2005, ваш ход? Стив Джобс сделал свой выбор:**
 
